--- a/client/templates/ipad.html
+++ b/client/templates/ipad.html
@@ -21,11 +21,20 @@
 		</div>
 		
 		
-		<div class='section' id='emoji'>
+		<div class='section bottom hidden' id='emoji'>
 			<button class='btn btn-large happy' name='happy'>HAPPY</button>
 			<button class='btn btn-large sad' name='sad'>SAD</button>
 			<button class='btn btn-large angry' name='angry'>ANGRY</button>
 			<button class='btn btn-large eyeroll' name='eyeroll'>EYE ROLL</button>
+		</div>
+		
+		<div class='section bottom' id='message'>
+			<form>
+				<div class='form-group'>
+					<input type='text' class="form-control" name='message' id='messageInput'>
+					<button class='btn btn-large' type='submit'>Send message</button>
+				</div>
+			</form>
 		</div>
 	</div>
 </template>
