--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -33,3 +33,34 @@ canvas {
 	padding:10px;
 }
 
+#fadeout{
+	position:absolute;
+	left:0;
+	top:0;
+	width:100%;
+	height:100%;
+	z-index:50;
+	background-color:rgba(0,0,0,.5);
+	display:none;
+}
+
+#questionForm{
+	background-color:white;
+	position:absolute;
+	width:70%;
+	height:70%;
+	left:10%;
+	top:10%;
+	box-shadow: 0px 0px 58px 10px rgba(0,0,0,0.75);
+	z-index:100;
+	padding:5%;
+	display:none;
+}
+#closeQuestion{
+	position:absolute;
+	right:1%;
+	top:3%;
+	z-index:200;
+	font-size:20px;
+	cursor:pointer;
+}
