--- a/client/templates/controller.html
+++ b/client/templates/controller.html
@@ -1,6 +1,5 @@
 <template name='controllerMain'>
 	{{> navigation}}
-	<div class="controllerBody">
 		<div class='controllerBody'>
 			<button class='btn btn-large mode' name='question'>Question</button>
 			<button class='btn btn-large mode' name='vote'>Vote</button>
@@ -10,7 +9,6 @@
 		<div class='controllerBody'>
 			<button class='btn btn-large mode' id='ticker' name='ticker'>Toggle Ticker</button>	{{tickerStatus}}
 		</div>
-	</div>
 </template>
 
 <template name='controllerIpadControls'>
@@ -79,7 +77,8 @@
 		  <thead>
 			  <tr>
 				  <th width=10%>User</th>
-				  <th width=80%>Text</th>
+				  <th width=75%>Text</th>
+				  <th width=5%>Approved</th>
 				  <th width=5%>Cycles</th>
 				  <th width=5%>Delete</th>
 			  </tr>
@@ -96,6 +95,12 @@
   	<tr>
 	  <td>{{user}}</td>
 	  <td>{{text}}</td>
+	  <td>{{#if approved}}
+		  		YES
+		  {{else}}
+		  		NO
+		  {{/if}}
+	  </td>
 	  <td>{{cyclesRemaining}}</td>
 	  <td>
 	  		<button type="button" name={{_id}} class="btn btn-default btn-lg deleteTickerItem">
@@ -104,6 +109,90 @@
 	  </td>
    </tr>
 </template>
+
+
+
+<template name='controllerQuestions'>
+	{{> navigation}}
+
+	<div id='fadeout'>
+	</div>
+	<div id='questionForm'>
+	 	<button type="button" id='closeQuestion' class="btn btn-default btn-lg">
+	  		X
+	  	</button>
+			
+		<h1>New Question</h1>
+		<form>
+		  <div class="form-group">
+		    <label for="questionText">Question text</label>
+		    <input type="text" class="form-control" name="questionText" size="130" style='width:50%'>
+		  </div>
+		  <div class="form-group">
+		    <label for="questionText">Answer 1</label>
+		    <input type="text" class="form-control" name="answer1" size="130" style='width:50%'>
+		  </div>
+		  <div class="form-group">
+		    <label for="questionText">Answer 2</label>
+		    <input type="text" class="form-control" name="answer2" size="130" style='width:50%'>
+		  </div>
+		  <div class="form-group">
+		    <label for="questionText">Answer 3</label>
+		    <input type="text" class="form-control" name="answer3" size="130" style='width:50%'>
+		  </div>
+		  <div class="form-group">
+		    <label for="questionText">Answer 4</label>
+		    <input type="text" class="form-control" name="answer4" size="130" style='width:50%'>
+		  </div>
+		  <div class="form-group">
+		    <label for="questionText">Answer 5</label>
+		    <input type="text" class="form-control" name="answer5" size="130" style='width:50%'>
+		  </div>
+		  <div class="form-group">
+		    <label for="questionText">Answer 6</label>
+		    <input type="text" class="form-control" name="answer6" size="130" style='width:50%'>
+		  </div>
+		    <button type="submit" class="btn btn-default">Submit</button>
+		</form>
+	</div>
+
+	<div class='controllerBody'>
+		<div class='controllerBody'>
+	    	<button class="btn btn-default" id='addQuestion'>Add a question</button>
+		</div>
+	    <table class='table table-striped table-bordered'>
+			<thead>
+				<tr>
+					<th width=80%>Question</th>
+					<th width=10%>Edit</th>
+					<th width=10%>Delete</th>
+				</tr>
+			</thead>
+			<tbody>
+			      {{#each questions}}
+			        {{> question}}
+			      {{/each}}
+			</tbody>
+	    </table>
+	</div>
+
+</template>
+<template name="question">
+  	<tr>
+	  <td>{{questionText}}</td>
+	  <td>
+	  		<button type="button" name={{_id}} class="btn btn-default btn-lg deleteQuestion">
+		  		-
+		  	</button>
+	  </td>
+	  <td>
+	  		<button type="button" name={{_id}} class="btn btn-default btn-lg editQuestion">
+		  		X
+		  	</button>
+	  </td>
+   </tr>
+</template>
+
 
 <template name="navigation">
 	<nav class="navbar navbar-default">
