--- a/client/templates/controller.html
+++ b/client/templates/controller.html
@@ -1,4 +1,4 @@
-<template name='controllerMain'>
+<template name='controllerWall'>
 	{{> navigation}}
 		<div class='controllerBody'>
 			<button class='btn btn-large mode' name='question'>Question</button>
@@ -28,39 +28,44 @@
 	</div>
 </template>
 
-<template name='controllerIpadConnections'>
+<template name='controllerDeviceConnections'>
 	{{> navigation}}
 	<div class="controllerBody">
+		<div style='text-align:center; padding:5px;'>
+	  		<button type="button" name='ipad' class="btn btn-default btn-lg filter">
+		  		iPads
+		  	</button>		
+	  		<button type="button" name='controller' class="btn btn-default btn-lg filter">
+		  		Controllers
+		  	</button>		
+		</div>
 	    <table class='table table-striped table-bordered'>
 		  <thead>
 			  <tr>
-				  <th width=10%>iPad ID</th>
+				  <th width=10%>Device ID</th>
 				  <th width=80%>Status</th>
 			  </tr>
 		  </thead>
 		  <tbody>
-		      {{#each iPads}}
-		        {{> iPad}}
+		      {{#each devices}}
+		        {{> device}}
 		      {{/each}}
 		  </tbody>
 	    </table>
 
 	</div>
 </template>
-<template name="iPad">
+<template name="device">
   	<tr>
-	  <td>{{ipadId}}</td>
+	  <td>{{deviceid}}</td>
 	  <td>{{status}}</td>
 	  <td>
-	  		<button type="button" name={{_id}} class="btn btn-default btn-lg deleteTickerItem">
+	  		<button type="button" name={{_id}} class="btn btn-default btn-lg deleteConnectedDevice">
 		  		X
 		  	</button>
 	  </td>
    </tr>
 </template>
-
-
-
 
 
 <template name='controllerTicker'>
@@ -122,35 +127,36 @@
 	  		X
 	  	</button>
 			
-		<h1>New Question</h1>
+		<h1>{{questionFormHeader}}</h1>
 		<form>
+		  <input type='hidden' name='id' value='{{questionID}}'>
 		  <div class="form-group">
 		    <label for="questionText">Question text</label>
-		    <input type="text" class="form-control" name="questionText" size="130" style='width:50%'>
+		    <input type="text" class="form-control" name="questionText" size="130" style='width:50%' value='{{questionText}}'>
 		  </div>
 		  <div class="form-group">
-		    <label for="questionText">Answer 1</label>
-		    <input type="text" class="form-control" name="answer1" size="130" style='width:50%'>
+		    <label for="answer1">Answer 1</label>
+		    <input type="text" class="form-control" name="answer1" size="130" style='width:50%' value='{{answer1}}'>
 		  </div>
 		  <div class="form-group">
-		    <label for="questionText">Answer 2</label>
-		    <input type="text" class="form-control" name="answer2" size="130" style='width:50%'>
+		    <label for="answer2">Answer 2</label>
+		    <input type="text" class="form-control" name="answer2" size="130" style='width:50%' value='{{answer2}}'>
 		  </div>
 		  <div class="form-group">
-		    <label for="questionText">Answer 3</label>
-		    <input type="text" class="form-control" name="answer3" size="130" style='width:50%'>
+		    <label for="answer3">Answer 3</label>
+		    <input type="text" class="form-control" name="answer3" size="130" style='width:50%' value='{{answer3}}'>
 		  </div>
 		  <div class="form-group">
-		    <label for="questionText">Answer 4</label>
-		    <input type="text" class="form-control" name="answer4" size="130" style='width:50%'>
+		    <label for="answer4">Answer 4</label>
+		    <input type="text" class="form-control" name="answer4" size="130" style='width:50%' value='{{answer4}}'>
 		  </div>
 		  <div class="form-group">
-		    <label for="questionText">Answer 5</label>
-		    <input type="text" class="form-control" name="answer5" size="130" style='width:50%'>
+		    <label for="answer5">Answer 5</label>
+		    <input type="text" class="form-control" name="answer5" size="130" style='width:50%' value='{{answer5}}'>
 		  </div>
 		  <div class="form-group">
-		    <label for="questionText">Answer 6</label>
-		    <input type="text" class="form-control" name="answer6" size="130" style='width:50%'>
+		    <label for="answer6">Answer 6</label>
+		    <input type="text" class="form-control" name="answer6" size="130" style='width:50%' value='{{answer6}}'>
 		  </div>
 		    <button type="submit" class="btn btn-default">Submit</button>
 		</form>
@@ -163,9 +169,8 @@
 	    <table class='table table-striped table-bordered'>
 			<thead>
 				<tr>
-					<th width=80%>Question</th>
-					<th width=10%>Edit</th>
-					<th width=10%>Delete</th>
+					<th width=60%>Question</th>
+					<th width=40% colspan=3>Actions</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -181,12 +186,20 @@
   	<tr>
 	  <td>{{questionText}}</td>
 	  <td>
-	  		<button type="button" name={{_id}} class="btn btn-default btn-lg deleteQuestion">
-		  		-
+	  		<button type="button" name={{_id}} class="btn btn-default btn-lg setActiveQuestion">
+		  		CUE FOR DISPLAY
 		  	</button>
+		  	{{#if isActive}}
+		  		Q
+		  	{{/if}}
 	  </td>
 	  <td>
 	  		<button type="button" name={{_id}} class="btn btn-default btn-lg editQuestion">
+		  		EDIT
+		  	</button>
+	  </td>
+	  <td>
+	  		<button type="button" name={{_id}} class="btn btn-default btn-lg deleteQuestion">
 		  		X
 		  	</button>
 	  </td>
@@ -198,11 +211,11 @@
 	<nav class="navbar navbar-default">
 	  <div class="container-fluid">
 	      <ul class="nav navbar-nav">
-		    <li class="{{activeIfTemplateIs 'Controller'}}"><a href="/controller">Main</a></li>
+		    <li class="{{activeIfTemplateIs 'ControllerWall'}}"><a href="/controller_wall">Wall</a></li>
 	        <li class="{{activeIfTemplateIs 'ControllerTicker'}}"><a href="/controller_ticker">Ticker</a></li>
 	        <li class="{{activeIfTemplateIs 'ControllerQuestions'}}"><a href="/controller_questions">Questions</a></li>
 	        <li class="{{activeIfTemplateIs 'ControllerIpadControls'}}"><a href="/controller_ipad_controls">iPad Controls</a></li>
-	        <li class="{{activeIfTemplateIs 'ControllerIpadConnections'}}"><a href="/controller_ipad_connections">iPad Connections</a></li>
+	        <li class="{{activeIfTemplateIs 'ControllerIpadConnections'}}"><a href="/controller_device_connections">Device Connections</a></li>
 	      </ul>
 	  </div>
 	</nav>	
