--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -41,7 +41,6 @@ canvas {
 	height:100%;
 	z-index:50;
 	background-color:rgba(0,0,0,.5);
-	display:none;
 }
 
 #questionForm{
@@ -54,7 +53,6 @@ canvas {
 	box-shadow: 0px 0px 58px 10px rgba(0,0,0,0.75);
 	z-index:100;
 	padding:5%;
-	display:none;
 }
 #closeQuestion{
 	position:absolute;
@@ -63,4 +61,7 @@ canvas {
 	z-index:200;
 	font-size:20px;
 	cursor:pointer;
+}
+.hidden{
+    display:none;
 }
