--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -62,6 +62,12 @@ canvas {
 	font-size:20px;
 	cursor:pointer;
 }
-.hidden{
-    display:none;
+
+.hiddenFade {
+	transition: opacity 0.7s;
+	opacity:0;
+}
+.visibleFade{
+    transition: opacity 0.7s;
+    opacity:1;
 }
