--- a/client/templates/controller_connections.html
+++ b/client/templates/controller_connections.html
@@ -13,7 +13,9 @@
 		  <thead>
 			  <tr>
 				  <th width=10%>Device ID</th>
-				  <th width=80%>Status</th>
+				  <th width=10%>Status</th>
+				  <th width=70%>Emoji</th>
+				  <th width=10%>Delete</th>
 			  </tr>
 		  </thead>
 		  <tbody>
@@ -29,6 +31,13 @@
   	<tr>
 	  <td>{{deviceid}}</td>
 	  <td>{{toUpperCase status}}</td>
+	  <td>
+            <select class="emojiSelect" id="" name="emoji_{{deviceid}}">
+                {{#each emojis}}
+                    <option value="{{this}}">{{this}}</option>
+                {{/each}}
+            </select>
+	  </td>
 	  <td>
 	  		<button type="button" name={{_id}} class="btn btn-default btn-lg deleteConnectedDevice">
 		  		X
