--- a/client/templates/controller_questions.html
+++ b/client/templates/controller_questions.html
@@ -4,7 +4,7 @@
 	<div id='fadeout' class="{{questionFormVisible}}">
 	</div>
 	<div id='questionForm' class="{{questionFormVisible}}">
-	 	<button type="button" id='closeQuestion' class="btn btn-default btn-lg">
+	 	<button type="button" id='closeQuestion' class="btn btn-default btn-lg closeBtn">
 	  		X
 	  	</button>
 			
