--- a/client/templates/controller_connections.html
+++ b/client/templates/controller_connections.html
@@ -40,7 +40,7 @@
 		<table class='table table-striped table-bordered'>
 		    <tr>
 		        <td>Last seen</td>
-		        <td>{{ipadInfo.last_seen}}</td>
+		        <td>{{formatTime ipadInfo.last_seen}}</td>
 		    </tr>
 		    <tr>
 		        <td>Emoji</td>
@@ -64,7 +64,7 @@
 <template name="device">
   	<tr>
 	  <td>{{deviceid}}</td>
-	  <td>{{toUpperCase status}}</td>
+	  <td class="{{statusClass}}">{{toUpperCase status}}</td>
 	  <td>{{emoji}}</td>
 	  <td>
 	  		<button type="button" name={{_id}} class="btn btn-default btn-lg viewConnectedDevice">
