Start on question display.  Start fixing ticker to go the right way.  Finish basic question result view on controller

--- a/client/templates/wall.html
+++ b/client/templates/wall.html
@@ -1,6 +1,7 @@
 <template name='wall'>
 	<div id='background'></div>
-	<div id='forceFontLoad'>Force font load.</div>
+	<div class='forceFontLoad SwissBlack'>Force font load.</div>
+	<div class='forceFontLoad Swiss'>Force font load.</div>
 </template>
 
 
