--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -3,16 +3,27 @@
 	font-style: normal;
 	src: url("/fonts/Swiss 721 Roman.ttf") format("truetype"); /* non-IE */	
 }
+@font-face {
+	font-family: "SwissBlack";
+	font-style: normal;
+	src: url("/fonts/Swiss 721 Roman.ttf") format("truetype"); /* non-IE */	
+}
 body {
 	width:100%;
 	height:100%;
 	margin: 0;
 	padding: 0;
-	font-family:'Swiss';
 }
-#forceFontLoad{	
+.forceFontLoad{	
 	position:absolute;
 	z-index:2000;
+	
+}
+.Swiss{
+	font-family:'Swiss';
+}
+.SwissBlack{
+	font-family:'SwissBlack';
 }
 #background {
 	position:absolute;
