--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -76,13 +76,16 @@ canvas {
 
 .hiddenFade {
 	transition: opacity 0.5s, transform 0.5s;
+	-webkit-transition: opacity 0.5s, transform 0.5s;
 	opacity:0;
 	transform:scaleY(0);
 	pointer-events:none;
 }
 .visibleFade{
 	animation-delay:0.5s;
+	-webkit-animation-delay:0.5s;
     transition: opacity 0.5s, transform 0.5s;
+    -webkit-transition: opacity 0.5s, transform 0.5s;
     opacity:1;
     transform:scaleY(1);
     pointer-events: inherit;
