Added glass panels to title scene. Added title scene control button, created background for non-title scenes.

--- a/client/templates/controller_wall.html
+++ b/client/templates/controller_wall.html
@@ -2,6 +2,7 @@
 	{{> navigation}}
 		<div class='controllerBody'>
 			<h1>WALL SCENE</h1>
+				<button class='btn btn-large scene {{sceneActive "titleScene"}}' name='titleScene'>Title</button>
 				<button class='btn btn-large scene {{sceneActive "question"}}' name='question'>Question</button>
 				<button class='btn btn-large scene {{sceneActive "emoji"}}' name='emoji'>Emoji</button>	
 		</div>
