--- a/client/templates/controller_questions.html
+++ b/client/templates/controller_questions.html
@@ -17,50 +17,56 @@
  		  <div class="form-group">
 		    <label for="answer1">Answer 1</label>
 		    <input type="text" class="form-control" name="answer1" size="130" style='width:50%' value="{{questionData 'answer1' 'editQuestion'}}">
-		    <input type="text" class="form-control" name="answerColor1" size="130" style='width:50%' value="{{questionData 'answerColor1' 'editQuestion'}}">
+		    <select class="form-control" name="answerColor1" value="{{questionData 'answerColor1' 'editQuestion'}}">
 		    {{#each colorOptions}}
-		    	<div class='swatch' style='background-color:{{.}}'></div>
+		    	<option value={{hex}} {{colorSelected '1' hex}}>{{name}}</option>
 		    {{/each}}
+		    </select>
 		  </div>
 		  <div class="form-group">
 		    <label for="answer2">Answer 2</label>
 		    <input type="text" class="form-control" name="answer2" size="130" style='width:50%' value="{{questionData 'answer2' 'editQuestion'}}">
-		    <input type="text" class="form-control" name="answerColor2" size="130" style='width:50%' value="{{questionData 'answerColor2' 'editQuestion'}}">
+		    <select class="form-control" name="answerColor2" value="{{questionData 'answerColor2.hex' 'editQuestion'}}">
 		    {{#each colorOptions}}
-		    	<div class='swatch' style='background-color:{{.}}'></div>
+		    	<option value={{hex}} {{colorSelected '2' hex}}>{{name}}</option>
 		    {{/each}}
+		    </select>
 		  </div>
 		  <div class="form-group">
 		    <label for="answer3">Answer 3</label>
 		    <input type="text" class="form-control" name="answer3" size="130" style='width:50%' value="{{questionData 'answer3' 'editQuestion'}}">
-		    <input type="text" class="form-control" name="answerColor3" size="130" style='width:50%' value="{{questionData 'answerColor3' 'editQuestion'}}">
+		    <select class="form-control" name="answerColor3" value="{{questionData 'answerColor3' 'editQuestion'}}">
 		    {{#each colorOptions}}
-		    	<div class='swatch' style='background-color:{{.}}'></div>
+		    	<option value={{hex}} {{colorSelected '3' hex}}>{{name}}</option>
 		    {{/each}}
+		    </select>
 		  </div>
 		  <div class="form-group">
 		    <label for="answer4">Answer 4</label>
 		    <input type="text" class="form-control" name="answer4" size="130" style='width:50%' value="{{questionData 'answer4' 'editQuestion'}}">
-		    <input type="text" class="form-control" name="answerColor4" size="130" style='width:50%' value="{{questionData 'answerColor4' 'editQuestion'}}">
+		    <select class="form-control" name="answerColor4" value="{{questionData 'answerColor4' 'editQuestion'}}">
 		    {{#each colorOptions}}
-		    	<div class='swatch' style='background-color:{{.}}'></div>
+		    	<option value={{hex}} {{colorSelected '4' hex}}>{{name}}</option>
 		    {{/each}}
+		    </select>
 		  </div>
 		  <div class="form-group">
 		    <label for="answer5">Answer 5</label>
 		    <input type="text" class="form-control" name="answer5" size="130" style='width:50%' value="{{questionData 'answer5' 'editQuestion'}}">
-		    <input type="text" class="form-control" name="answerColor5" size="130" style='width:50%' value="{{questionData 'answerColor5' 'editQuestion'}}">
+		    <select class="form-control" name="answerColor5" value="{{questionData 'answerColor5' 'editQuestion'}}">
 		    {{#each colorOptions}}
-		    	<div class='swatch' style='background-color:{{.}}'> </div>
+		    	<option value={{hex}} {{colorSelected '5' hex}}>{{name}}</option>
 		    {{/each}}
+		    </select>
 		  </div>
 		  <div class="form-group">
 		    <label for="answer6">Answer 6</label>
 		    <input type="text" class="form-control" name="answer6" size="130" style='width:50%' value="{{questionData 'answer6' 'editQuestion'}}">
-		    <input type="text" class="form-control" name="answerColor6" size="130" style='width:50%' value="{{questionData 'answerColor6' 'editQuestion'}}">
+		    <select class="form-control" name="answerColor6" value="{{questionData 'answerColor6' 'editQuestion'}}">
 		    {{#each colorOptions}}
-		    	<div class='swatch' style='background-color:{{.}}'>  </div>
+		    	<option value={{hex}} {{colorSelected '6' hex}}>{{name}}</option>
 		    {{/each}}
+		    </select>
 		  </div>
 		    <button type="submit" class="btn btn-default">Submit</button>
 		</form>
